# alpamayo

./: .gitignore  README.md  alpamayo_mlx_port_plan.html  pyproject.toml
docs/: FINETUNE_SFT.md
finetune/rl/: launcher.py
mlx_port/: action_space.py  alpamayo_chat.py  expert.py  expert_key_remap.py  expert_loader.py  extract_random_front_wide.py  flow_matching.py  inference.py  inference.py.bak  key_remap.py  load_alpamayo_vlm.py  processor.py  profiling.py  robust_detokenizer.py  test_alpamayo_vlm_inference.py  test_inference_pai_coc.py  test_vlm_inference.py  vlm_loader.py
mlx_port/models/: action_space_utils_mlx.py  alpamayo_qwen3vl.py  alpamayo_r1_mlx.py  token_utils_mlx.py  trajectory_tokenizer_mlx.py
mlx_port/scripts/: extract_test_images.py
mlx_port/tests/: __init__.py  test_alpamayo_r1_mlx.py  test_analytical_unicycle.py  test_data_loading.py  test_end_to_end_inference.py  test_expert_flow_matching_integration.py  test_expert_smoke.py  test_expert_weight_loading.py  test_full_alpamayo_inference.py  test_inference_row7.py  test_pai_coc_inference.py  test_traj_to_action_numerical.py  test_vlm_smoke.py  test_vlm_vision_encoder.py  test_vlm_weight_loading.py
notebook/: inference.ipynb
reports/: stage0_progress.html  stage1_debug_notes.html  stage1_progress.html  stage_template.html
reports/archive/: stage1_progress.html
scripts/: apply_mlx_vlm_patches.sh  convert_release_config_to_training.py  curate_pai_samples.py  download_pai.py
src/alpamayo_r1/: healthcheck.py  helper.py  load_physical_aiavdataset.py  test_healthcheck.py  test_helper.py  (+1 more)
(+20 files in other folders)
